apps/k8s/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: postgres
    - port: 80
      name: pgadmin
  selector:
    app: postgres
