apps/k8s/postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: postgres
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.stage.codedang.com
      secretName: pgadmin-tls
  rules:
    - host: pgadmin.stage.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-svc
                port:
                  number: 80
